--- a/node-app/deployment.yaml
+++ b/node-app/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: node-app
-          image: guming/examplenode-dev:4
+          image: jinngm/examplenode-dev:4
           ports:
             - containerPort: 3000
